	- Show language flags on release lists on the homepage
	- Allow hiding of NSFW cover even if NSFW warning is disabled
	- Removed /g/debug
	- Replaced recursive stored procedures with WITH .. SELECT queries
	- Merged db[VN|Producer|Release][Edit|Add] into dbItemEdit and dbItemAdd
	- Removed the use of CONSTRAINT TRIGGERs
	- Added maxlength check on the website fields for releases and producers

2.9 - 2009-11-16
	- Fixed another bug with the calculation of tags_vn_bayesian.spoiler
	- Implemented proper daemonizing and error handling for Multi
	- Added basic Makefile
	- Added public database API
	- Added [code] tag to bb2html()
	- Tweaked Multi's idlequote timings
	- Added :SUBSUB: macro to the doc pages
	- Allow NULL values for releases_rev.minage
	- Made age ratings and external VN link titles translatable
	- Added wikipedia link for producers
	- Added bayesian rating for VNs
	- Improved popularity sorting on VN list

2.8 - 2009-10-24
	- Converted relation graphs to use inline SVG
	  - Relation graphs now use the color scheme of selected skin
	  - VN relations are translatable in both the interface and the graphs
	  - Full date is displayed in graphs instead of only month/year
	- Converted to ENUM data type:
	  - vn_relations.relation
	  - anime.type
	  - changes.type
	  - releases_rev.type
	  - releases_media.medium
	- New language: Hungarian
	- Complete rewrite of the Javascript code:
	  - Intended to be less error prone, more maintainable, and easier to make
	    'XHTML compliant' in the future (currently still has some issues here).
	  - Improved spoiler selection on /v+/tagmod
	  - Everything merged into one file.
	  - Optionally minified (using JavaScript::Minifier::XS)
	  - Language strings are translatable
	  - Information is automatically synchronised with data/global.pl
	- Changed language selector into a Javascript dropdown
	- Added producer role (developer/publisher) to releases